@@ -52,6 +52,8 @@ Other changes:
 
 * spelling fixes, occurred. Bugzilla Report 27282.
 
+* add uid and gid to tarfileset. Bugzilla Report 19120.
+
 Changes from Ant 1.6.0 to Ant 1.6.1
 ===================================
 
